# Networking-Dashboard

./: README.md
backend/: .gitattributes  __init__.py  main.py  models.py  populate_db.py  requirements.txt
backend/app/: __init__.py  config.py  models.py  routes.py  sample_data.py  tasks.py
backend/app/SmartGridSim/comlib_dps/sgdevices/DPSHMI_GOOSE/: CMakeLists.txt  Makefile  dpshmi  dpshmi.c  dpshmi_230306.c
backend/app/SmartGridSim/comlib_dps/sgdevices/DPSHMI_SV/: CMakeLists.txt  Makefile  dpshmi_sv  dpshmi_sv.c
backend/app/services/: ebpf_control.py  ebpf_switch.py  mininet_simulation.py  monitoring.py
backend/migrations/: alembic.ini
backend/migrations/versions/: 016d4f89b1a3_update_againnnn_for_sample_data.py  0de1d1b8325f_initial_migration.py  13096887c88e_initial_commit.py  14bc046d7064_.py  1f1e9006a072_tester_database_for_integration.py  35ba4670f477_user_tables_removed.py  5227b1270d4f_update_againnnnn_for_sample_data.py  7a7441c10fae_new_database_initialised.py  a67682d6f773_update_for_sample_data.py  a6fda7c4e7d6_initial_migration_for_nodes_connections_.py  a839e2472e76_create_initial_database_schema.py  c05447ee482a_initial_commit.py  cb1785596044_users_fix.py  d620a2f19815_update_again_for_sample_data.py  e377b2b96e15_initail_database_schema.py  ea17db54a287_update_againnn_for_sample_data.py
backend/services/: eBPFSwitch.py  mininet_simulation.py  network_controller.py
frontend/: .gitattributes  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  function_colours.js  main.jsx  theme.js
(+74 files in other folders)
